@@ -1112,6 +1112,16 @@ Setsize: размер(ы) равны нулю или отрицательны
 Возвращает число созданных кадров.
 @end deftypefn
 
+@deftypefn {Метод класса @code{mglGraph}} @code{int} GetFrame (@code{int} i)
+@deftypefnx {Функция С} @code{int} mgl_get_frame (@code{HMGL} gr, @code{int} i)
+Заменяет объекты рисования на объекты из кадра с номером @var{i}. Функция работает если установлен флаг @code{MGL_VECT_FRAME} (по умолчанию).
+@end deftypefn
+
+@deftypefn {Метод класса @code{mglGraph}} @code{int} AddFrame (@code{int} i)
+@deftypefnx {Функция С} @code{int} mgl_add_frame (@code{HMGL} gr, @code{int} i)
+Добавляет объекты рисования из кадра с номером @var{i} к уже существующим. Функция работает если установлен флаг @code{MGL_VECT_FRAME} (по умолчанию).
+@end deftypefn
+
 @deftypefn {Метод класса @code{mglGraph}} @code{void} ResetFrames ()
 @deftypefnx {Функция С} @code{int} mgl_reset_frames (@code{HMGL} gr)
 Сбрасывает счетчик кадров в 0.
